<?xml version="1.0"?>
<package>
  <name>dependency_injection_ros</name>
  <version>0.0.0</version>
  <description>
    Example of how to use Dependency Injection with ROS.
  </description>
  <author email="griswald.brooks@gmail.com">Griswald Brooks</author>
  <maintainer email="griswald.brooks@gmail.com">Griswald Brooks</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>


  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <test_depend>rosunit</test_depend>
</package>
